--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 
 .loader {
     display: none;
-    border: 4px solid rgba(255, 255, 255, 0.3);
+    border: 4px solid white;
     border-top: 4px solid blue;
     border-radius: 50%;
     width: 25px;
